[fix] balloon overlap

--- a/components/editor-components/CampaignSettings.module.scss
+++ b/components/editor-components/CampaignSettings.module.scss
@@ -32,6 +32,8 @@
 	line-height: 1.2rem;
 	margin: 0;
 	padding: 0;
+	position: relative;
+	z-index: 1000;
 
 	strong {
 		color: #333;
